use unicol logo

--- a/README.Rmd
+++ b/README.Rmd
@@ -32,18 +32,22 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 <!-- badges: start -->
 <!-- badges: end -->
 
-<!-- unikn pkg logo and link: -->
-<a href = "`r url_unikn_cran`">
-<img src = "./inst/pix/pkg_unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/>
+<!-- unicol pkg logo and link: -->
+<a href = "`r url_unicol_github`">
+<img src = "./inst/pix/pkg_unicol.png" alt = "unicol::" align = "right" width = "220px" style = "width: 220px; float: right; border:0;"/>
 </a>
 
+<!-- Slogan: -->
 
 The colors of your university.
 
 
-## Goal
+## Objectives 
 
-The R package **unicol** provides colors and color palettes for various universities. 
+<!-- Goal: -->
+
+The R\ package **unicol** contains colors and color palettes for various universities. 
+Our goal is to collect and provide as many palettes as possible for creating scientific visualizations. 
 
 <!-- Course coordinates: --> 
 
@@ -54,9 +58,12 @@ The **unicol** package was developed as a collaborative project by the following
 * Taught by **[Hansjörg Neth](https://neth.de/)** (<h.neth@uni.kn>, [SPDS](https://www.spds.uni-konstanz.de/), [University of Konstanz](https://www.uni-konstanz.de/en/))
 
 
-<!-- Goal: -->
+<!-- Relation to unikn:: -->
 
-The goal of **unicol** is to provide university color palettes for creating scientific visualizations. 
+<!-- unikn pkg logo and link: -->
+<!-- <a href = "`r url_unikn_cran`"> -->
+<!-- <img src = "./inst/pix/pkg_unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/> -->
+<!-- </a> -->
 
 This package is based on the R\ package **[unikn](https://CRAN.R-project.org/package=unikn)** and loads key functionality from it. 
 
@@ -226,6 +233,13 @@ demopal(limerick_1, type = 3, main = "Using the colors of Limerick University")
 ```
 
 <!-- +++ here now +++  -->
+
+
+<!-- unicol pkg logo and link: -->
+<a href = "`r url_unicol_github`">
+<img src = "./inst/pix/pkg_unicol.png" alt = "unicol::" align = "right" width = "220px" style = "width: 220px; float: right; border:0;"/>
+</a>
+
 
 ## Contact
 
