--- a/vignettes/color_pals.Rmd
+++ b/vignettes/color_pals.Rmd
@@ -45,13 +45,18 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 ```
 
 <!-- unikn logo and link: -->
-<a href = "`r url_unikn`">
-<img src = "../inst/pix/logo_unikn.png" alt = "unikn::" align = "right" width = "300px" style = "width: 300px; float: right; border:0;"/>
-</a>
+<!-- <a href = "`r url_unikn`"> -->
+<!-- <img src = "../inst/pix/logo_unikn.png" alt = "unikn::" align = "right" width = "300px" style = "width: 300px; float: right; border:0;"/> -->
+<!-- </a> -->
 
 <!-- unikn pkg logo and link: -->
-<a href = "`r url_unikn_cran`">
-<img src = "../inst/pix/pkg_unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/>
+<!-- <a href = "`r url_unikn_cran`"> -->
+<!-- <img src = "../inst/pix/pkg_unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/> -->
+<!-- </a> -->
+
+<!-- unicol pkg logo and link: -->
+<a href = "`r url_unicol_github`">
+<img src = "../inst/pix/pkg_unicol.png" alt = "unicol::" align = "right" width = "220px" style = "width: 220px; float: right; border:0;"/>
 </a>
 
 This vignettes provides an overview of the **color palettes** provided by the **unicol** package. 
@@ -175,9 +180,9 @@ knitr::kable(all_pals_df, caption = tab_caption, row.names = TRUE)
 
 ## Vignettes
 
-<!-- unikn pkg logo and link: -->
-<a href = "`r url_unikn_cran`">
-<img src = "../inst/pix/pkg_unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/>
+<!-- unicol pkg logo and link: -->
+<a href = "`r url_unicol_github`">
+<img src = "../inst/pix/pkg_unicol.png" alt = "unicol::" align = "right" width = "220px" style = "width: 220px; float: right; border:0;"/>
 </a>
 
 The following vignettes provide an overview of and examples for using the **unicol** color palettes: 
