--- a/vignettes/using_pals.Rmd
+++ b/vignettes/using_pals.Rmd
@@ -45,14 +45,20 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 ```
 
 <!-- unikn logo and link: -->
-<a href = "`r url_unikn`">
-<img src = "../inst/pix/logo_unikn.png" alt = "unikn::" align = "right" width = "300px" style = "width: 300px; float: right; border:0;"/>
-</a>
+<!-- <a href = "`r url_unikn`"> -->
+<!-- <img src = "../inst/pix/logo_unikn.png" alt = "unikn::" align = "right" width = "300px" style = "width: 300px; float: right; border:0;"/> -->
+<!-- </a> -->
 
 <!-- unikn pkg logo and link: -->
-<a href = "`r url_unikn_cran`">
-<img src = "../inst/pix/pkg_unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/>
+<!-- <a href = "`r url_unikn_cran`"> -->
+<!-- <img src = "../inst/pix/pkg_unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/> -->
+<!-- </a> -->
+
+<!-- unicol pkg logo and link: -->
+<a href = "`r url_unicol_github`">
+<img src = "../inst/pix/pkg_unicol.png" alt = "unicol::" align = "right" width = "220px" style = "width: 220px; float: right; border:0;"/>
 </a>
+
 
 This vignettes shows **how to** use the color palettes included in the **unicol** R\ package. 
 (See the vignette on [Color palettes](color_pals.html) for an overview of the palettes included in the package.) 
@@ -199,7 +205,7 @@ my_pal <- unikn::usecol(princeton_1, n = 50)
 
 library(ggplot2)
 
-ggplot(my_data, aes(x = X, y = Y, fill = Group)) + 
+ggplot2::ggplot(my_data, aes(x = X, y = Y, fill = Group)) + 
   geom_area() +
   scale_fill_manual(values = my_pal) +
   theme_void() +
@@ -238,9 +244,9 @@ See the [Color recipes](https://hneth.github.io/unikn/articles/color_recipes.htm
 
 ## Vignettes
 
-<!-- unikn pkg logo and link: -->
-<a href = "`r url_unikn_cran`">
-<img src = "../inst/pix/pkg_unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/>
+<!-- unicol pkg logo and link: -->
+<a href = "`r url_unicol_github`">
+<img src = "../inst/pix/pkg_unicol.png" alt = "unicol::" align = "right" width = "220px" style = "width: 220px; float: right; border:0;"/>
 </a>
 
 The following vignettes provide an overview of and examples for using the **unicol** color palettes: 
