--- a/README.Rmd
+++ b/README.Rmd
@@ -41,20 +41,24 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 
 The colors of your university.
 
-
 ## Objectives 
+
+<!-- Vision / Mission: -->
+
+The R\ package **unicol** contains the colors and color palettes of various universities. 
+We collect and provide a diverse range of color palettes for creating scientific visualizations. 
 
 <!-- Goal: -->
 
-The R\ package **unicol** contains colors and color palettes for various universities. 
-Our goal is to collect and provide as many palettes as possible for creating scientific visualizations. 
+Our primary goal is to make it simple to create beautiful visualizations that are in accordance with institutional style guides. 
+Assuming that you have some R\ code for creating an image, the **unicol** allows you to directly use the color palette of your institution. 
 
 <!-- Course coordinates: --> 
 
 The **unicol** package was developed as a collaborative project by the following course:
 
 * **Open Source Software Development in R** (ADILT applications, PSY-18040), at **[University of Konstanz](https://www.uni-konstanz.de/en/)**   
-* Spring 2023: **Tuesdays**, **13:30-15:00**; in **C426** 
+* Spring/Summer\ 2023: **Tuesdays**, **13:30-15:00**; in **C426** 
 * Taught by **[Hansjörg Neth](https://neth.de/)** (<h.neth@uni.kn>, [SPDS](https://www.spds.uni-konstanz.de/), [University of Konstanz](https://www.uni-konstanz.de/en/))
 
 
@@ -205,21 +209,22 @@ unikn::seecol(pal = pal_list,
 ### Using color palettes
 
 As the **unicol** palettes are provided as vectors of R colors, they can simply be used as the `col` argument of R graphics functions. 
-For instance, we can use the MIT colors (of the [Massachusetts Institute of Technology](https://web.mit.edu/)) in a bar plot as follows:
+For instance, we can use the MIT colors (of the [Massachusetts Institute of Technology](https://web.mit.edu/)) in a bar plot 
+(with the `barplot()` function of the base\ R **graphics** package) as follows:
 
 ```{r example-base-r-1}
-barplot(height = 1:10, 
+barplot(height = 1:10,
         col = mit_pal, 
         main = "Using the MIT colors")
 ```
 
-To modify a color palette (e.g., by resizing or adding transparency), we can use the `usecol()` function of the 
+To modify a color palette (e.g., by resizing the palette or adding transparency), we use the `usecol()` function of the 
 **[unikn](https://CRAN.R-project.org/package=unikn)** package:
 
 ```{r example-base-r-2}
-barplot(height = 1:10, 
-        col = usecol(mit_pal, n = 10), 
-        main = "Using a gradient of MIT colors")
+barplot(height = 1/sqrt(1:16), 
+        col = usecol(mit_pal, n = 16), 
+        main = "A color gradient of MIT colors")
 ```
 
 <!-- More examples: -->
@@ -227,13 +232,17 @@ barplot(height = 1:10,
 Here are some some additional examples how the color palettes from **unicol** can be used:
 
 ```{r examples-unicol, message = FALSE}
-seecol(yale_1, main = "The primary colors of Yale University")
-demopal(berkeley_1, type = 2, main = "The colors of Berkeley, University of California", seed = 3)
-demopal(limerick_1, type = 3, main = "Using the colors of Limerick University")
+# Viewing a color palette:
+unikn::seecol(yale_1, main = "The primary colors of Yale University")
+# Demo plots:
+unikn::demopal(berkeley_1, type = 2, main = "The colors of Berkeley, University of California", seed = 3)
+unikn::demopal(limerick_1, type = 3, main = "Using the colors of Limerick University")
 ```
 
-<!-- +++ here now +++  -->
 
+## Adding color palettes
+
+<!-- +++ here now +++  -->
 
 <!-- unicol pkg logo and link: -->
 <a href = "`r url_unicol_github`">
@@ -242,6 +251,8 @@ demopal(limerick_1, type = 3, main = "Using the colors of Limerick University")
 
 
 ## Contact
+
+
 
 Add contact details here.
 
