add note on selective-/incompleteness

--- a/README.Rmd
+++ b/README.Rmd
@@ -243,6 +243,14 @@ unikn::demopal(limerick_1, type = 3, main = "Using the colors of the University 
 
 ## Adding color palettes
 
+<!-- unicol pkg logo and link: -->
+<a href = "`r url_unicol_github`">
+<img src = "./inst/pix/pkg_unicol_s.png" alt = "unicol::" align = "right" width = "200px" style = "width: 200px; float: right; border:0;"/>
+</a> 
+
+The current range of color palettes included in **unicol** is selective and incomplete. 
+We are always happy to include new color palettes and institutions from all over the world. 
+
 If you are missing a color palette, you can easily create it. 
 For instructions, see the documentation of the `newpal()` function (of the **[unikn](https://CRAN.R-project.org/package=unikn)**). 
 The vignette on [Institutional colors](https://hneth.github.io/unikn/articles/color_inst.html) provides a corresponding example. 
@@ -252,17 +260,10 @@ If you create a new color palette, **please let us know** (on [GitHub issues](ht
 
 <!-- +++ here now +++  -->
 
-<!-- unicol pkg logo and link: -->
-<a href = "`r url_unicol_github`">
-<img src = "./inst/pix/pkg_unicol_s.png" alt = "unicol::" align = "right" width = "200px" style = "width: 200px; float: right; border:0;"/>
-</a>
 
+<!-- ## Contact -->
 
-## Contact
-
-
-
-Add contact details here.
+<!-- ToDo: Add contact details here. -->
 
 
 ------
