update call for contributions (to point to new GitHub issue)

--- a/README.Rmd
+++ b/README.Rmd
@@ -30,11 +30,11 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 <!-- badges: end -->
 
 
-# unicol `r packageVersion('unicol')` <img src = "./inst/pix/pkg_unicol_s.png" align = "right" alt = "unicol::" width = "200px" />
+# unicol `r packageVersion('unicol')` <img src = "./inst/pix/pkg_unicol_s.png" align = "right" alt = "unicol::" width = "180px" />
 
 <!-- unicol pkg logo and link: -->
 <!-- <a href = "`r url_unicol_github`"> -->
-<!-- <img src = "./inst/pix/pkg_unicol_s.png" alt = "unicol::" align = "right" width = "200px" style = "width: 200px; float: right; border:0;"/> -->
+<!-- <img src = "./inst/pix/pkg_unicol_s.png" alt = "unicol::" align = "right" width = "180px" style = "width: 180px; float: right; border:0;"/> -->
 <!-- </a> -->
 
 <!-- Slogan: -->
@@ -43,7 +43,7 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 
 <!-- Vision / Mission: -->
 
-The R\ package **unicol** contains the colors and color palettes of various universities. 
+The R\ package **unicol** contains the colors and color palettes of various universities.   
 We collect and provide a diverse range of color palettes for creating scientific visualizations. 
 
 <!-- Goal / Objectives: -->
@@ -67,7 +67,7 @@ The **unicol** package was developed as a collaborative project by the following
 <!-- <img src = "./inst/pix/pkg_unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/> -->
 <!-- </a> -->
 
-This package is based on the R\ package **[unikn](https://CRAN.R-project.org/package=unikn)** and loads key functionality from it. 
+This package is based on the R\ package **[unikn](`r url_unikn_cran`)** and loads key functionality from it. 
 
 
 ## Installation
@@ -237,25 +237,44 @@ unikn::demopal(limerick_1, type = 3, main = "Using the colors of the University 
 ```
 
 
-## Adding color palettes
+<!-- ## Adding color palettes -->
+
+<!-- Collecting contributed color palettes (in unicol): -->
+
+## Your color palettes
 
 <!-- unicol pkg logo and link: -->
 <a href = "`r url_unicol_github`">
-<img src = "./inst/pix/pkg_unicol_s.png" alt = "unicol::" align = "right" width = "200px" style = "width: 200px; float: right; border:0;"/>
+<img src = "./inst/pix/pkg_unicol_s.png" alt = "unicol::" align = "right" width = "180px" style = "width: 180px; float: right; border:0;"/>
 </a> 
 
 The current range of color palettes included in **unicol** is selective and incomplete. 
 We are always happy to include new color palettes and institutions from all over the world. 
 
 If you are missing a color palette, you can easily create it. 
-For instructions, see the documentation of the `newpal()` function (of the **[unikn](https://CRAN.R-project.org/package=unikn)**). 
+For instructions how this can be done, please see the documentation of the `newpal()` function (of the **[unikn](`r url_unikn_cran`)** package). 
 The vignette on [Institutional colors](https://hneth.github.io/unikn/articles/color_inst.html) provides a corresponding example. 
 
-If you create a new color palette, **please let us know** (on [GitHub issues](https://github.com/hneth/unicol/issues)) so that we can include it in future versions of the **unicol** package. 
+**Call for contributions: Collecting color palettes**
 
+- Are you using the **unikn** color functions to create **your own color palettes**? 
+
+<!-- ToDo: -->
+<a href = "https://github.com/hneth/unicol/issues/30">
+<img src = "./inst/pix/todo.png" alt = "unicol::todo" align = "right" width = "180px" style = "width: 180px; float: right; border:0;"/>
+</a>
+
+If you do create a new color palette, **please let us know** (on this [GitHub issue](https://github.com/hneth/unicol/issues/30)) 
+so that we can include it in future versions of the **unicol** package. 
+To enable us to verify and provide credit to your contributions, please send us the following information:  
+
+1. your code (e.g., the `newpal()` command creating your color palette),   
+2. your reference or source information (e.g., some URL with color definitions),   
+3. your name and some contact information (e.g., an Email address).  
+  
+We're looking forward to **your inputs and contributions** (at this [GitHub issue](https://github.com/hneth/unicol/issues/30))! 
 
 <!-- +++ here now +++  -->
-
 
 <!-- ## Contact -->
 
