--- a/vignettes/color_pals.Rmd
+++ b/vignettes/color_pals.Rmd
@@ -56,7 +56,7 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 
 <!-- unicol pkg logo and link: -->
 <a href = "`r url_unicol_github`">
-<img src = "../inst/pix/pkg_unicol_s.png" alt = "unicol::" align = "right" width = "200px" style = "width: 200px; float: right; border:0;"/>
+<img src = "../inst/pix/pkg_unicol_s.png" alt = "unicol::" align = "right" width = "180px" style = "width: 180px; float: right; border:0;"/>
 </a>
 
 This vignettes provides an overview of the **color palettes** provided by the **unicol** package. 
@@ -175,17 +175,40 @@ knitr::kable(all_pals_df, caption = tab_caption, row.names = TRUE)
 ```
 
 
-## Adding color palettes
+<!-- Collecting contributed color palettes (in unicol): -->
+
+## Your color palettes
+
+<!-- unicol pkg logo and link: -->
+<!-- <a href = "`r url_unicol_github`"> -->
+<!-- <img src = "./inst/pix/pkg_unicol_s.png" alt = "unicol::" align = "right" width = "180px" style = "width: 180px; float: right; border:0;"/> -->
+<!-- </a>  -->
 
 The current range of color palettes included in **unicol** is selective and incomplete. 
 We are always happy to include new color palettes and institutions from all over the world. 
 
 If you are missing a color palette, you can easily create it. 
-For instructions, see the documentation of the `newpal()` function (of the **[unikn](https://CRAN.R-project.org/package=unikn)**). 
+For instructions how this can be done, please see the documentation of the `newpal()` function (of the **[unikn](`r url_unikn_cran`)** package). 
 The vignette on [Institutional colors](https://hneth.github.io/unikn/articles/color_inst.html) provides a corresponding example. 
 
-If you create a new color palette, **please let us know** (on [GitHub issues](https://github.com/hneth/unicol/issues)) so that we can include it in future versions of the **unicol** package. 
+**Call for contributions: Collecting color palettes**
 
+- Are you using the **unikn** color functions to create **your own color palettes**? 
+
+<!-- ToDo: -->
+<a href = "https://github.com/hneth/unicol/issues/30">
+<img src = "../inst/pix/todo.png" alt = "unicol::todo" align = "right" width = "180px" style = "width: 180px; float: right; border:0;"/>
+</a>
+
+If you do create a new color palette, **please let us know** (on this [GitHub issue](https://github.com/hneth/unicol/issues/30)) 
+so that we can include it in future versions of the **unicol** package. 
+To enable us to verify and provide credit to your contributions, please send us the following information:  
+   
+1. your code (e.g., the `newpal()` command creating your color palette),   
+2. your reference or source information (e.g., some URL with color definitions),   
+3. your name and some contact information (e.g., an Email address).  
+  
+We're looking forward to **your inputs and contributions** (at this [GitHub issue](https://github.com/hneth/unicol/issues/30))! 
 
 <!-- +++ here now +++  -->
 
@@ -194,7 +217,7 @@ If you create a new color palette, **please let us know** (on [GitHub issues](ht
 
 <!-- unicol pkg logo and link: -->
 <a href = "`r url_unicol_github`">
-<img src = "../inst/pix/pkg_unicol_s.png" alt = "unicol::" align = "right" width = "200px" style = "width: 200px; float: right; border:0;"/>
+<img src = "../inst/pix/pkg_unicol_s.png" alt = "unicol::" align = "right" width = "180px" style = "width: 180px; float: right; border:0;"/>
 </a>
 
 The following vignettes provide an overview of and examples for using the **unicol** color palettes: 
