--- a/README.Rmd
+++ b/README.Rmd
@@ -27,8 +27,8 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 ```
 
 <!-- badges: start -->
-<!-- badges: end -->
 
+<!-- badges: end -->
 
 # unicol `r packageVersion('unicol')` <img src = "./inst/pix/pkg_unicol_s.png" align = "right" alt = "unicol::" width = "180px" />
 
@@ -39,13 +39,13 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 
 <!-- Slogan: -->
 
+
 ### The colors of your university {-}
 
-<!-- Vision / Mission / DESCRIPTION: -->
+<!-- DESCRIPTION / Mission / Vision: -->
 
 The **unicol** package provides the colors and color palettes of various universities for easy plotting and printing in\ R. 
 We collect and provide a diverse range of color palettes for creating scientific visualizations. 
-
 
 <!-- Goal / Objectives: -->
 
@@ -65,7 +65,7 @@ devtools::install_github("hneth/unicol")
 
 ## Usage
 
-The **unicol** package provides colors and color palettes, whereas the **[unikn](https://CRAN.R-project.org/package=unikn)** package provides color-related functions:
+The **unicol** package provides colors and color palettes, whereas the **[unikn](`r url_unikn_cran`)** package provides color-related functions:
 
 ```{r load-pkgs, message = FALSE}
 library(unicol)  # for color palettes
