--- a/README.Rmd
+++ b/README.Rmd
@@ -30,12 +30,12 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 
 <!-- badges: end -->
 
-# unicol `r packageVersion('unicol')` <img src = "./inst/pix/logo_unicol.png" align = "right" alt = "unicol::" width = "200px" />
+# unicol `r packageVersion('unicol')` <img src = "inst/pix/logo.png" align = "right" alt = "unicol::" width = "200px" alt="" />
 
 
 <!-- unicol pkg logo and link: -->
 <!-- <a href = "`r url_unicol_github`"> -->
-<!-- <img src = "./inst/pix/logo_unicol.png" alt = "unicol::" align = "right" width = "200px" style = "width: 200px; float: right; border:0;"/> -->
+<!-- <img src = "./inst/pix/logo.png" alt = "unicol::" align = "right" width = "200px" style = "width: 200px; float: right; border:0;"/> -->
 <!-- </a> -->
 
 <!-- Slogan: -->
@@ -229,7 +229,7 @@ unikn::demopal(limerick_1, type = 3, main = "Using the colors of the University 
 
 <!-- unicol pkg logo and link: -->
 <a href = "`r url_unicol_github`">
-<img src = "./inst/pix/logo_unicol.png" alt = "unicol::" align = "right" width = "200px" style = "width: 200px; float: right; border:0;"/>
+<img src = "./inst/pix/logo.png" alt = "unicol::" align = "right" width = "200px" style = "width: 200px; float: right; border:0;"/>
 </a> 
 
 The current range of color palettes included in **unicol** is selective and incomplete. 
@@ -265,9 +265,9 @@ We're looking forward to **your inputs and contributions** (at this [GitHub issu
 
 ### Origin 
 
-<!-- unikn logo and link: -->
+<!-- Uni Konstanz / uni.kn logo and link: -->
 <a href = "`r url_unikn`">
-<img src = "./inst/pix/logo_unikn.png" alt = "unikn::" align = "right" width = "300px" style = "width: 300px; float: right; border:0;"/>
+<img src = "./inst/pix/logo_unikn.png" alt = "uni.kn" align = "right" width = "300px" style = "width: 300px; float: right; border:0;"/>
 </a>
 
 The **unicol** package originated as a collaborative project by the following course:
