--- a/vignettes/color_pals.Rmd
+++ b/vignettes/color_pals.Rmd
@@ -14,6 +14,8 @@ editor_options:
 ---
 
 ```{r setup, include = FALSE}
+org_opt <- options()  # store original user options
+
 options(max.print = "75")
 
 knitr::opts_chunk$set(echo = TRUE,
@@ -228,5 +230,10 @@ The following vignettes provide an overview of and examples for using the **unic
 | ---: |:---------|:-----------|
 | 1. | [Color palettes](color_pals.html) | The color palettes of the **unicol** R package |
 | 2. | [Using color palettes](using_pals.html) | Recipes for using the **unicol** color palettes |
+
+
+```{r restore-org-options, include = FALSE}
+options(org_opt)  # restore original user options
+```
 
 <!-- eof. -->
