--- a/README.Rmd
+++ b/README.Rmd
@@ -15,26 +15,38 @@ knitr::opts_chunk$set(
 
 # URLs: ------ 
 
-# unikn:
-url_unikn <- "https://www.uni-konstanz.de/"
+# unicol package: 
+url_unicol_cran   <- "https://CRAN.R-project.org/package=unicol"
+url_unicol_github <- "https://github.com/hneth/unicol"
 
+# unikn / Uni Konstanz:
+url_unikn <- "https://www.uni-konstanz.de"
+
+# unikn package: 
 url_unikn_cran   <- "https://CRAN.R-project.org/package=unikn"
 url_unikn_github <- "https://github.com/hneth/unikn"
-
-# unicol: 
-url_unicol_cran   <- "" # "https://CRAN.R-project.org/package=unicol"
-url_unicol_github <- "https://github.com/hneth/unicol"
 ```
 
-<!-- badges: start -->
 
-<!-- badges: end -->
+<!-- Devel badges start: -->
+[![CRAN status](https://www.r-pkg.org/badges/version/unicol)](https://CRAN.R-project.org/package=unicol)
+[![Downloads/month](https://cranlogs.r-pkg.org/badges/unicol)](https://www.r-pkg.org/pkg/unicol)
+[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.8252106.svg)](https://doi.org/10.5281/zenodo.8252106)
+<!-- Devel badges end. -->
+
+
+<!-- Release badges start: -->
+<!-- [![CRAN status](https://www.r-pkg.org/badges/version/unicol)](https://CRAN.R-project.org/package=unicol) -->
+<!-- [![R-CMD-check](https://github.com/hneth/unicol/actions/workflows/check-standard.yaml/badge.svg)](https://github.com/hneth/unicol/actions/workflows/check-standard.yaml) -->
+<!-- [![Total downloads](https://cranlogs.r-pkg.org/badges/grand-total/unicol)](https://www.r-pkg.org/pkg/unicol) -->
+<!-- [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.8252106.svg)](https://doi.org/10.5281/zenodo.8252106) -->
+<!-- Release badges end. -->
 
 # unicol `r packageVersion('unicol')` <img src = "inst/pix/logo.png" align = "right" alt = "unicol::" width = "165px" alt="" />
 
 
 <!-- unicol pkg logo and link: -->
-<!-- <a href = "`r url_unicol_github`"> -->
+<!-- <a href = "`r url_unicol_cran`"> -->
 <!-- <img src = "./inst/pix/logo.png" alt = "unicol::" align = "right" width = "165px" style = "width: 165px; float: right; border:0;"/> -->
 <!-- </a> -->
 
@@ -59,12 +71,23 @@ Assuming that you have some R\ code for creating an image, the **unicol** allows
 
 ## Installation
 
-You can install the development version of **unicol** from [GitHub](https://github.com/) with:
+The latest release of **unicol** is available from [CRAN](https://CRAN.R-project.org) at <https://CRAN.R-project.org/package=unicol>:
 
-```{r install-from-github, eval = FALSE}
-# install.packages("devtools")
-devtools::install_github("hneth/unicol")
+```{r install-CRAN, echo = TRUE, eval = FALSE}
+install.packages('unicol')  # install from CRAN client
+library('unicol')           # load the package
 ```
+
+The current development version can be installed from its [GitHub](https://github.com) repository at <https://github.com/hneth/unicol/>: 
+
+```{r install-github, echo = TRUE, eval = FALSE}
+# install.packages('devtools')  # install pkg
+devtools::install_github('hneth/unicol')
+```
+
+<!-- Note: unicol is based on unikn -->
+
+The **unicol** package is based on the R\ package **[unikn](`r url_unikn_cran`)** and loads key functionality from it. 
 
 
 ## Usage
@@ -231,7 +254,7 @@ unikn::demopal(limerick_1, type = 3, main = "Using the colors of the University 
 ## Your color palettes
 
 <!-- unicol pkg logo and link: -->
-<a href = "`r url_unicol_github`">
+<a href = "`r url_unicol_cran`">
 <img src = "./inst/pix/logo.png" alt = "unicol::" align = "right" width = "165px" style = "width: 165px; float: right; border:0;"/>
 </a> 
 
@@ -276,7 +299,7 @@ We're looking forward to **your inputs and contributions** (at this [GitHub issu
 The **unicol** package originated as a collaborative project by the following course:
 
 * **Open Source Software Development in R** (ADILT applications, PSY-18040), at **[University of Konstanz](https://www.uni-konstanz.de/en/)**   
-* Spring/Summer\ 2023: **Tuesdays**, **13:30-15:00**; in **C426** 
+* Spring/Summer\ 2023: **Tuesdays**, **13:30—15:00**; in **C426** 
 * Taught by **[Hansjörg Neth](https://neth.de/)** (<h.neth@uni.kn>, [SPDS](https://www.spds.uni-konstanz.de/), [University of Konstanz](https://www.uni-konstanz.de/en/))
 
 
@@ -287,16 +310,24 @@ The **unicol** package originated as a collaborative project by the following co
 <!-- <img src = "./inst/pix/logo_unikn_pkg.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/> -->
 <!-- </a> -->
 
-This package is based on the R\ package **[unikn](`r url_unikn_cran`)** and loads key functionality from it. 
-
-<!-- +++ here now +++  -->
+The **unicol** package is based on the R\ package **[unikn](`r url_unikn_cran`)** and loads key functionality from it. 
 
 
 ### Citation 
 
 To support our efforts, please cite the **unicol** package in your derivations or publications. 
 
+
 <!-- Citation / reference (in APA format): -->
+
+- Neth, H. et al. (2023). 
+unicol: The colors of your university.  
+Social Psychology and Decision Sciences, University of Konstanz, Germany.  
+Computer software (R package version 0.1.0, August 16, 2023).  
+Retrieved from <https://CRAN.R-project.org/package=unicol>.  
+doi\ [10.5281/zenodo.8252106](https://doi.org/10.5281/zenodo.8252106) 
+
+<!-- +++ here now +++  -->
 
 <!-- BibTeX:  -->
 
